update readme, update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
-COOKIE=YOUR_COOKIE_HERE
-API_URL=https://YOUR_SCHOOL.myschoolapp.com/api/assignment2/StudentAssignmentCenterGet
+# Your Login Info
+SCHOOL_SUBDOMAIN=your-school-subdomain
+SCHOOL_EMAIL=your-email@example.com
+SCHOOL_PASS=your-password
+
+# Configuration
+# Set to 'False' if you want to see the browser open (good for debugging)
+# Set to 'True' when running automatically in the background
+HEADLESS=True
+
+# How long to wait (in ms) before giving up on a page load
+TIMEOUT=30000
